# ExtIO_sddc

./: .gitignore  CMakeLists.txt  Docmake.cmd  ExtIO_sddc.sln  HWSDRtable.h  Interface.h  LICENSE.txt  README.md  README.txt  SDDC_FX3.img  wisdom-arm  wisdom-x86
.github/workflows/: cmake.yml  lastest.yml
BBRF103_SE/: auxutil.c  auxutil.h  bbrf103.h  cyfxslfifosyncmulti.c  cyfxslfifosyncmulti.h  cyfxslfifousbdscr.c  cyfxtx.c  i2cmodule.c  i2cmodule.h  makefile
BBRF103_SE/BBRF103/: BBRF103.cyfx
BBRF103_SE/BBRF103/projectfiles/: gpif2model.xml  gpif2view.xml
Core/: CMakeLists.txt  FX3Class.h  FX3handler.h  IUsbHandler.h  RadioHandler.cpp  RadioHandler.h  SDDC_FX3.img  config.cpp  config.h  fft_mt_r2iq.cpp  fft_mt_r2iq.h  fft_mt_r2iq_avx.cpp  fft_mt_r2iq_avx2.cpp  fft_mt_r2iq_avx512.cpp  fft_mt_r2iq_def.cpp  fft_mt_r2iq_impl.hpp  fft_mt_r2iq_neon.cpp  fir.cpp  fir.h  ht257_0_0.h  ht257_1_7M.h  ht_FIR0.h  ht_FIR1.h  ht_FIR2.h  ht_FIR3.h  ht_FIR4.h  ht_FIR5.h  r2iq.cpp  r2iq.h
Core/arch/linux/: FX3handler.cpp  FX3handler.h  ezusb.c  streaming.c  streaming.h  usb_device.c
Core/arch/win32/: CyApiHandler.cpp  CyApiHandler.h  FX3handler.cpp  FX3handler.h  libusbHandler.h
Core/arch/win32/CyAPI/: CyAPI.cpp
Core/dsp/: calculator.h  converter.h  dspblock.h  fir.cpp  freq2iq.cpp  freq2iq.h  freqConverter.h  freqShifter.h  r2freq.cpp  r2freq.h  ringbuffer.h  signalparameters.h  simd.h
Core/include/: RadioHandler.h  r2iq.h  ringbuffer.h
Core/libusb/: libusb.cpp  libusb.hpp
Core/pffft/: sse2neon.h
Core/radio/: BBRF103Radio.cpp  HF103Radio.cpp  RX888R2Radio.cpp  RX888R3Radio.cpp  RX888Radio.cpp  RX999Radio.cpp  RXLucy.cpp  RadioHardware.cpp
Core/usb/: CMakeLists.txt  CyApiHandler.cpp  CyApiHandler.h  IUsbHandler.h  LibusbHandler.h  UsbHandlerFactory.cpp  UsbHandlerFactory.h  libusbHandler.cpp  libusbHandler.hpp
Core/usb/CyAPI/: CyAPI.cpp  CyAPI.h  UsbdStatus.h
Core/usb/libusb/: libusb.cpp  libusb.hpp
ExtIO_sddc/: BBRF103.cpp  BBRF103.h  CMakeLists.txt  ExtIO_sddc.cbp  ExtIO_sddc.cpp  ExtIO_sddc.def  ExtIO_sddc.h  ExtIO_sddc.rc  ExtIO_sddc.vcproj  ExtIO_sddc.vcxproj  FX3handler.cpp  FX3handler.h  Ht_257_64M_0600.h  Ht_257_64M_1500.h  Ht_257_64M_3400.h  Ht_257_64M_7200.h  LC_ExtIO_Types.h  R820T2.cpp  R820T2.h  RadioHandler.cpp  RadioHandler.h  SDDC_FX3.img  Si5351.cpp  Si5351.h  SplashWindow.cpp  SplashWindow.h  SplashWnd.cpp  SplashWnd.h  config.cpp  config.h  extio.def  ht257_0_7M.h  ht257_15_4M.h  ht257_1_7M.h  ht257_3_6M.h  ht257_7_5M.h  i2c_r820t2.cpp  i2c_r820t2.h  i2c_si5351.cpp  i2c_si5351.h  (+14 more)
ExtIO_sddc/CyAPI/: CyAPI.cpp
ExtIO_sddc/drivers/: r820t.cpp.1  rtlsdr_i2c.h  tuner_r82xx.cpp  tuner_r82xx.h
ExtIO_sddc/pffft/: pf_mixer.h
ExtIO_sddc/radio/: BBRF103Radio.cpp  HF103Radio.cpp  RX888R2Radio.cpp  RX999Radio.cpp  RadioHardware.cpp
SDDC_FX3/: .cproject  .project  Application.h  DebugConsole.c  R820T2.c  RunApplication.c  SDDC_GPIF.h  Si5351.c  StartStopApplication.c  StartUP.c  Support.c  USBdescriptor.c  USBhandler.c  bbrf103.c  cyfxtx.c  elf2img  hf103.c  i2cmodule.c  i2cmodule.h  makefile  makefile.linux  makefile_win  pcal6408a.c  pcal6408a.h  rx888.c  rx888r2.c  rx999.c  tuner_r82xx.c  tuner_r82xx.h
SDDC_FX3/SDDC_GPIF/: SDDC_GPIF.cyfx
SDDC_FX3/SDDC_GPIF/projectfiles/: gpif2timingsimulation.xml  gpif2view.xml
SDDC_FX3/driver/: Si5351.c  Si5351.h  adf4351.c  rd5815.c  rd5815.h  tuner_r82xx.c
SDDC_FX3/radio/: hf103.c  radio.h  rx888.c  rx888r2.c  rx888r3.c  rx999.c  rxlucy.c
SDK/fw_build/fx3_fw/: cx3_build_config.mak  cyfx3.scat  cyfx_startup.S  fx3.ld  fx3_256k.ld  fx3_armg++_config.mak  fx3_armgcc_config.mak  fx3_armrvds_config.mak  fx3_build_config.mak  fx3_def.xml  fx3cpp.ld
SDK/fw_lib/1_3_4/inc/: cyfx3_api.h  cyfxapidesc.h  cyfxversion.h  cyu3cardmgr.h  cyu3cardmgr_fx3s.h  cyu3descriptor.h  cyu3dma.h  cyu3error.h  cyu3externcend.h  cyu3externcstart.h  cyu3gpif.h  cyu3gpio.h  cyu3i2c.h  cyu3i2s.h  cyu3imagesensor.h  cyu3lpp.h  cyu3mbox.h  cyu3mipicsi.h  cyu3mmu.h  cyu3os.h  cyu3pib.h  cyu3sib.h  cyu3sibpp.h  cyu3socket.h  cyu3spi.h  cyu3system.h  cyu3tx.h  cyu3types.h  cyu3uart.h  cyu3usb.h  cyu3usbconst.h  cyu3usbhost.h  cyu3usbotg.h  cyu3utils.h  cyu3vic.h  gpif_regs.h  gpio_regs.h  i2c_regs.h  i2s_regs.h  pib_regs.h  (+7 more)
SDK/license/: license.txt
SDK/util/elf2img/: elf2img.c  readme.txt
SoapySDDC/: CMakeLists.txt  Registration.cpp  Settings.cpp  SoapySDDC.hpp  Streaming.cpp
cmake/: FileEmbed.cmake  git_version.h
hardware/: README.md
hardware/BBRF103/RC3_2018/: BBRF103-RC3.brd  BBRF103-RC3.sch  BBRF103.ods  License.txt
hardware/RX888/: README.md
hermeslite/: CMakeLists.txt  lite.cpp  lite.h  resource.h  resource.rc
libsddc/: CMakeLists.txt  libsddc.cpp  libsddc.h  rx888_test.cpp  sddc_stream_test.c  sddc_test.c  sddc_vhf_stream_test.c  wavewrite.c
unittest/: CMakeLists.txt  CppUnitTestFramework.hpp  calculator_test.cpp  core_test.cpp  dsp_test.cpp  freqconverter_test.cpp  freqshifter_test.cpp  r2iq_test.cpp  ringbuffer_test.cpp  signalparameters_test.cpp  simd_perf.cpp  unittests.cpp
